--- a/css/scss/_carrossel.scss
+++ b/css/scss/_carrossel.scss
@@ -48,8 +48,10 @@
 
         min-width: 60px;
         margin: 10px;
-
-        background: var(--optionBackground, var(--defaultBackground, #e6e9ed));
+        background-image: var(
+          --optionBackground,
+          var(--defaultBackground, #e6e9ed)
+        );
         background-size: auto 120%;
         background-position: center;
         border: 2px solid rgb(237, 218, 13);
