--- a/css/scss/_projetos.scss
+++ b/css/scss/_projetos.scss
@@ -17,22 +17,30 @@
 }
 
 .imagem-projetos {
-  position: absolute;
-  top: 10px;
-  right: 20px;
-  img {
-    max-width: 300px;
-    animation: pulsando 3s infinite ease-in-out;
+  display: none;
+  @include d(g) {
+    display: block;
+    position: absolute;
+    top: 10px;
+    right: 20px;
+    img {
+      max-width: 300px;
+      animation: pulsando 3s infinite ease-in-out;
+    }
   }
 }
 
 .imagem-projetos2 {
-  position: absolute;
-  top: 10px;
-  left: 20px;
-  img {
-    max-width: 300px;
-    animation: pulsando 3s infinite ease-in-out;
+  display: none;
+  @include d(g) {
+    display: block;
+    position: absolute;
+    top: 10px;
+    left: 20px;
+    img {
+      max-width: 300px;
+      animation: pulsando 3s infinite ease-in-out;
+    }
   }
 }
 @keyframes pulsando {
