att: responsivo, currículo

--- a/css/scss/_carrossel.scss
+++ b/css/scss/_carrossel.scss
@@ -8,6 +8,9 @@
   font-family: "Roboto", sans-serif;
   transition: 0.25s;
 
+  @include d(d) {
+    display: flex;
+  }
   @include d(g) {
     display: flex;
   }
