--- a/css/scss/style.scss
+++ b/css/scss/style.scss
@@ -8,6 +8,7 @@
 @import "page";
 @import "divisorias";
 @import "inicio";
+@import "download";
 @import "sobre";
 @import "skills";
 @import "radio";
@@ -15,4 +16,3 @@
 @import "contato";
 @import "footer";
 @import "carrossel";
-@import "sistema_solar";
